# tennis-coach-app

./: .gitignore  PRD.md  README.md
backend/: .env.example  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: analysis.py  pro_players.py  reports.py  users.py
backend/app/core/: auth.py  s3.py
backend/app/schemas/: analysis.py  pro_players.py
backend/app/services/: job_queue.py  quota.py
backend/tests/: conftest.py  test_api_analysis.py  test_api_pro_players.py  test_auth.py  test_job_queue.py  test_quota.py  test_s3.py
core/: CMakeLists.txt
core/src/: bindings.cpp  dtw_aligner.cpp  dtw_aligner.h  joint_angle_calculator.cpp  joint_angle_calculator.h  keypoint_normalizer.cpp  keypoint_normalizer.h  similarity_scorer.cpp  similarity_scorer.h
design/: F1-video-upload-analysis.md
frontend/: jest.config.ts  package-lock.json  package.json
frontend/src/__tests__/__mocks__/: next-image.tsx  next-navigation.ts
frontend/src/__tests__/lib/: api.test.ts
frontend/src/app/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/analyze/: CameraGuideModal.tsx  ProPlayerPicker.tsx  ShotTypeSelector.tsx  UploadProgressBar.tsx  VideoDropzone.tsx
frontend/src/lib/: api.ts
frontend/src/types/: analysis.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_pro_players.sql  002_analysis_jobs.sql  003_users_upload_quota.sql  004_pro_player_references.sql  005_analysis_reports.sql
supabase/seed/: 001_pro_players.sql
worker/: requirements.txt  worker.py
worker/tests/: test_pipeline.py
(+8 files in other folders)
